[package]
name = "AsyncStructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"]}
tokio-util = { version = "0.7.7", features = ["full"] }
rmp = "^0.8"
rmp-serde = "1.1.1"
rmp-serialize = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
async-stream = "0.3.4"